harvester-test: new module fixes circular dependency.