@@ -14,7 +14,6 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <test>dk.netarkivet.harvester.UnitTesterSuite</test>
   </properties>
 
   <dependencies>
@@ -24,31 +23,7 @@
       <version>5.0-SNAPSHOT</version>
     </dependency>
 
-    <dependency>
-      <groupId>dk.netarkivet.netarchivesuite</groupId>
-      <artifactId>common-test</artifactId>
-      <version>5.0-SNAPSHOT</version>
-      <scope>test</scope>
-    </dependency>
-
-<!-- 
-    <dependency>
-      <groupId>dk.netarkivet.netarchivesuite</groupId>
-      <artifactId>archive</artifactId>
-      <version>5.0-SNAPSHOT</version>
-      <scope>runtime</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>dk.netarkivet.netarchivesuite</groupId>
-      <artifactId>monitor</artifactId>
-      <version>5.0-SNAPSHOT</version>
-      <scope>runtime</scope>
-    </dependency>
- -->
- 
-
-    <dependency>
+   <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.2</version>
@@ -98,93 +73,10 @@
     </dependency>
 
     <dependency>
-      <groupId>mockobjects</groupId>
-      <artifactId>mockobjects-core</artifactId>
-      <version>0.09</version>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>mockobjects</groupId>
-      <artifactId>mockobjects-jdk1.4-j2ee1.3</artifactId>
-      <version>0.09</version>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
       <groupId>commons-pool</groupId>
       <artifactId>commons-pool</artifactId>
       <version>1.6</version>
     </dependency>
-
-    <dependency>
-      <groupId>jaxen</groupId>
-      <artifactId>jaxen</artifactId>
-      <version>1.1</version>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>it.unimi.dsi</groupId>
-      <artifactId>mg4j</artifactId>
-      <version>1.0.1</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.derby</groupId>
-      <artifactId>derbyclient</artifactId>
-      <version>10.10.1.1</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.derby</groupId>
-      <artifactId>derby</artifactId>
-      <version>10.10.1.1</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.derby</groupId>
-      <artifactId>derbytools</artifactId>
-      <version>10.10.1.1</version>
-    </dependency>
-    
-    <dependency>
-    <groupId>org.slf4j</groupId>
-    <artifactId>slf4j-simple</artifactId>
-    <version>1.4.2</version>
-    <optional>true</optional>
-    </dependency>
-
   </dependencies>
 
-  <build>
-    <testResources>
-      <testResource>
-        <directory>tests</directory>
-      </testResource>
-    </testResources>
-
-    <plugins>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.17</version>
-        <configuration>
-          <argLine>
-            -Xmx768m
-            -Dfile.encoding=UTF-8
-            -Ddk.netarkivet.settings.file=tests/dk/netarkivet/test-settings.xml
-            -Dorg.apache.commons.logging.log=org.apache.commons.logging.impl.Jdk14Logger
-            -Djava.util.logging.config.file=tests/dk/netarkivet/testlog.prop
-            -Djava.security.manager
-            -Djava.security.policy=tests/dk/netarkivet/ant-test.policy
-            -Dorg.archive.crawler.frontier.AbstractFrontier.queue-assignment-policy=org.archive.crawler.frontier.HostnameQueueAssignmentPolicy,org.archive.crawler.frontier.IPQueueAssignmentPolicy,org.archive.crawler.frontier.BucketQueueAssignmentPolicy,org.archive.crawler.frontier.SurtAuthorityQueueAssignmentPolicy,org.archive.crawler.frontier.TopmostAssignedSurtQueueAssignmentPolicy,dk.netarkivet.harvester.harvesting.DomainnameQueueAssignmentPolicy
-
-            -Duser.language=en -Duser.country=US -Duser.variant=US
-          </argLine>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
 </project>
